--- a/conf/harbor/values.yaml
+++ b/conf/harbor/values.yaml
@@ -28,7 +28,8 @@ expose:
       secretName: ""
   ingress:
     hosts:
-      core: core.harbor.domain
+      # core: core.harbor.domain
+      core: ""
     # set to the type of ingress controller if it has specific requirements.
     # leave as `default` for most ingress controllers.
     # set to `gce` if using the GCE ingress controller
@@ -109,7 +110,8 @@ expose:
 # the IP address of k8s node
 #
 # If Harbor is deployed behind the proxy, set it as the URL of proxy
-externalURL: https://core.harbor.domain
+# externalURL: https://core.harbor.domain
+externalURL: https://core.harbor.domain:40443
 
 # The persistence is enabled by default and a default StorageClass
 # is needed in the k8s cluster to provision volumes dynamically.
